-
Bug
-
Resolution: Done
-
P3: Somewhat important
-
5.6.0
-
Windows 8.1, Windows 10
-
eb50193136c7c73be864e3232d01e98ddc24e539 (qtbase/5.6, 31.5.2016, 5.6.2)
[Windows][HighDpi]: When showing a messagebox in an environment with a 4k monitor as a secondary screen then it will not be sized correctly. This was done with the Fusion style.
Screens: 2, High DPI scaling: inactive # 0 "\\.\DISPLAY1" Depth: 32 Primary: yes Geometry: 1920x1200+0+0 Available: 1857x1200+63+0 Virtual geometry: 5760x2160+0+0 Available: 5697x2160+63+0 2 virtual siblings Physical size: 519x324 mm Refresh: 59 Hz Power state: 0 Physical DPI: 93.9653,94.0741 Logical DPI: 96,96 Subpixel_None DevicePixelRatio: 1 Pixel density: 1 Primary orientation: 2 Orientation: 2 Native orientation: 0 OrientationUpdateMask: 0 # 1 "\\.\DISPLAY2" Depth: 32 Primary: no Geometry: 3840x2160+1920+0 Available: 3778x2160+1982+0 Virtual geometry: 5760x2160+0+0 Available: 5697x2160+63+0 2 virtual siblings Physical size: 621x341 mm Refresh: 59 Hz Power state: 0 Physical DPI: 157.063,160.891 Logical DPI: 144,144 Subpixel_None DevicePixelRatio: 1 Pixel density: 2 Primary orientation: 2 Orientation: 2 Native orientation: 0 OrientationUpdateMask: 0
- duplicates
-
QTCREATORBUG-16133 Dialog Minimum Sizes on High DPI Display
-
- Closed
-
| For Gerrit Dashboard: QTBUG-52735 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 157108,2 | QDialog::adjustPosition(): Manually set target screen before moving. | 5.6 | qt/qtbase | Status: MERGED | +2 | 0 |
| 166044,2 | QDialog::adjustPosition(): Check screen number | 5.6 | qt/qtbase | Status: MERGED | +2 | 0 |