QDialog::adjustPosition(): Manually set target screen before moving.

QDialog::adjustPosition() can move the dialog across screens. A call to
QWindow::resize() later in the show sequence might then see the wrong scaling
factor if the screen changed notification is still stuck in an event queue.
Prevent that by setting the target screen early on.

Task-number: QTBUG-52735
Change-Id: I17bb3490b660f8f17c36524457cb87adbb7851e9
Reviewed-by: Andy Shaw <andy.shaw@qt.io>

cregit: eb50193136c7c73be864e3232d01e98ddc24e539 https://github.com/qt/qtbase/commit/eb50193136c7c73be864e3232d01e98ddc24e539